Update About page

--- a/about.html
+++ b/about.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About The Yorkie Blog</title>
+    <title>
+      About | Super Awesome Labs | Website Development, Website Design, Search
+      Engine Optimozation (SEO)
+    </title>
     <meta
       name="description"
-      content="A blog about Yorkshire Terrier fun facts."
+      content="About | Super Awesome Labs | Website Development, Website Design, Search Engine
+      Optimozation (SEO)"
     />
     <link href="../style.css" rel="stylesheet" />
   </head>
@@ -17,12 +21,12 @@
         <a
           href="/"
           class="brand-name"
-          alt="The Yorkie Blog"
-          aria-label="The Yorkie Blog"
+          alt="Super Awesome Labs"
+          aria-label="Super Awesome Labs"
         >
           <div>
-            <img src="../assets/images/logo.png" alt="logo" class="logo" />
-            <span class="brand-name">The Yorkie Blog</span>
+            <img src="../assets/icons/logo.png" alt="logo" class="logo" />
+            <span class="brand-name">Super Awesome Labs</span>
           </div>
           <div>
             <a href="/about" class="nav-link">About</a>
@@ -48,46 +52,50 @@
 
     <!-- footer  -->
     <footer>
-      <div class="footer-container">
-        <div class="container">
-          <div class="columns">
-            <div class="left-column">
-              <p class="column-header">Subscribe</p>
-              <p class="column-text">Receive our free monthly newsletters!</p>
-              <label for="subscribe-input" class="subscribe-labels" type="text"
+      <div class="container">
+        <div class="columns">
+          <div class="left-column">
+            <p class="footer-header">Super Subscribe</p>
+            <p class="column-text">Receive awesome newsletters!</p>
+            <label for="subscribe-input" class="subscribe-labels" type="text"
+              >Subscribe</label
+            >
+            <input
+              aria-label="subscribe input"
+              type="text"
+              name="email"
+              required="required"
+              placeholder="Email Address"
+              id="subscribe-input"
+            />
+            <span>
+              <label
+                for="subscribe-button"
+                class="subscribe-labels"
+                type="button"
                 >Subscribe</label
               >
-              <input
-                aria-label="subscribe input"
-                type="text"
-                name="email"
-                required="required"
-                placeholder="Email Address"
-                id="subscribe-input"
-              />
-              <span>
-                <label
-                  for="subscribe-button"
-                  class="subscribe-labels"
-                  type="button"
-                  >Subscribe</label
-                >
-                <input type="hidden" name="action" value="subscribe" />
-                <button id="subscribe-button">
-                  Subscribe
-                </button>
-              </span>
-            </div>
-            <div class="right-column">
-              <p class="column-header">Social Media</p>
-              <a href="#" class="social-media-links column-text">Twitter</a>
-              <a href="#" class="social-media-links column-text">Instagram</a>
-              <a href="#" class="social-media-links column-text">YouTube</a>
-            </div>
+              <input type="hidden" name="action" value="subscribe" />
+              <button id="subscribe-button">
+                Subscribe
+              </button>
+            </span>
+          </div>
+          <div class="right-column">
+            <p class="footer-header ">Awesome Social Media</p>
+            <a href="#" class="social-media-links column-text">Twitter</a>
+            <a href="#" class="social-media-links column-text">Instagram</a>
+            <a href="#" class="social-media-links column-text">YouTube</a>
           </div>
         </div>
       </div>
+      <!-- /.container  -->
     </footer>
+    <div class="copyright">
+      <div class="container copyright-container">
+        <p>© Super Awesome</p>
+      </div>
+    </div>
     <!-- /footer  -->
   </body>
 </html>
