--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
       About | Super Awesome Labs | Website Development, Website Design, Search
       Engine Optimozation (SEO)
     </title>
+    <link rel="icon" type="image/png" href="./assets/icons/logo.png" />
     <meta
       name="description"
       content="About | Super Awesome Labs | Website Development, Website Design, Search Engine
