--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h1 class="hero-tagline">
           We're a Super Awesome web development company!
         </h1>
-        <a href="./pages/about.html" class="hero-button">Call to Awesome</a>
+        <a href="./pages/about.html" class="hero-button"
+          >More About Super Awesome</a
+        >
       </div>
     </div>
     <footer>
