--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
           </div>
           <div class="right-column">
             <p class="footer-header ">Awesome Social Media</p>
-            <a href="#" class="social-media-links column-text">Twitter</a>
+            <a
+              href="https://twitter.com/SuperAwesomeX"
+              class="social-media-links column-text"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Twitter</a
+            >
             <a href="#" class="social-media-links column-text">Instagram</a>
             <a href="#" class="social-media-links column-text">YouTube</a>
           </div>
