--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
       Super Awesome Labs | Website Development, Website Design, Search Engine
-      Optimozation (SEO)
+      Optimization (SEO)
     </title>
     <link rel="icon" type="image/png" href="./assets/icons/logo.png" />
     <meta
@@ -83,7 +83,13 @@
               rel="noopener noreferrer"
               >Twitter</a
             >
-            <a href="#" class="social-media-links column-text">Instagram</a>
+            <a
+              href="https://www.instagram.com/superawesomelabs/"
+              class="social-media-links column-text"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Instagram</a
+            >
             <a href="#" class="social-media-links column-text">YouTube</a>
           </div>
         </div>
