Update pages and styles

--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
           </div>
           <div>
             <a href="/about" class="nav-link">About</a>
-            <a href="#" class="nav-link">Blog</a>
-            <a href="#" class="nav-link">Contact</a>
+            <!-- <a href="#" class="nav-link">Blog</a> -->
+            <!-- <a href="#" class="nav-link">Contact</a> -->
           </div>
         </a>
       </nav>
@@ -41,12 +41,13 @@
 
     <div class="about-container">
       <div class="container">
-        <h2>About</h2>
+        <h2 class="about-header">About</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-          repellat quasi a alias? Dignissimos quasi, consequuntur voluptatem eos
-          inventore voluptatibus laborum qui illum ipsam odit doloribus vitae
-          possimus id dicta?
+          Hey there!
+        </p>
+        <p>
+          This Super Awesome site is currently under construction. Please follow
+          us on social media to stay updated on the official site launch.
         </p>
       </div>
     </div>
@@ -56,6 +57,18 @@
       <div class="container">
         <div class="columns">
           <div class="left-column">
+            <p class="footer-header">Contact</p>
+            <p class="column-text">
+              Email us at
+              <a
+                href="mailto:superawesomelabs@gmail.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                >superawesomelabs@gmail.com</a
+              >.
+            </p>
+          </div>
+          <!-- <div class="left-column">
             <p class="footer-header">Super Subscribe</p>
             <p class="column-text">Receive awesome newsletters!</p>
             <label for="subscribe-input" class="subscribe-labels" type="text"
@@ -81,12 +94,36 @@
                 Subscribe
               </button>
             </span>
-          </div>
+          </div> -->
+          <!-- /.left-column -->
           <div class="right-column">
             <p class="footer-header ">Awesome Social Media</p>
-            <a href="#" class="social-media-links column-text">Twitter</a>
-            <a href="#" class="social-media-links column-text">Instagram</a>
-            <a href="#" class="social-media-links column-text">YouTube</a>
+            <p>
+              <a
+                href="https://twitter.com/SuperAwesomeX"
+                class="social-media-links column-text "
+                target="_blank"
+                rel="noopener noreferrer"
+                >Twitter</a
+              >
+              <span class="social-media-after"></span>
+              <a
+                href="https://www.instagram.com/superawesomelabs/"
+                class="social-media-links column-text"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Instagram</a
+              >
+              <span class="social-media-after"></span>
+              <a
+                href="https://www.linkedin.com/company/super-awesome-labs/"
+                class="social-media-links column-text"
+                target="_blank"
+                rel="noopener noreferrer"
+                >LinkedIn</a
+              >
+            </p>
+            <!-- <a href="#" class="social-media-links column-text">YouTube</a> -->
           </div>
         </div>
       </div>
