--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <span class="brand-name">Super Awesome Labs</span>
           </div>
           <div class="nav-links">
-            <a href="/about" class="nav-link">About</a>
-            <a href="#" class="nav-link">Blog</a>
-            <a href="#" class="nav-link">Contact</a>
+            <a href="/about.html" class="nav-link">About</a>
+            <!-- <a href="#" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Contact</a> -->
           </div>
         </a>
       </nav>
@@ -39,7 +39,8 @@
     <div class="hero-container">
       <div class="container">
         <h1 class="hero-tagline">
-          We're a Super Awesome web development company!
+          We're a <span class="tagline">Super Awesome</span> web development
+          company!
         </h1>
         <a href="/about" class="hero-button">More About Super Awesome</a>
       </div>
@@ -48,6 +49,18 @@
       <div class="container">
         <div class="columns">
           <div class="left-column">
+            <p class="footer-header">Contact</p>
+            <p class="column-text">
+              Email us at
+              <a
+                href="mailto:superawesomelabs@gmail.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                >superawesomelabs@gmail.com</a
+              >.
+            </p>
+          </div>
+          <!-- <div class="left-column">
             <p class="footer-header">Super Subscribe</p>
             <p class="column-text">Receive awesome newsletters!</p>
             <label for="subscribe-input" class="subscribe-labels" type="text"
@@ -73,24 +86,36 @@
                 Subscribe
               </button>
             </span>
-          </div>
+          </div> -->
+          <!-- /.left-column -->
           <div class="right-column">
             <p class="footer-header ">Awesome Social Media</p>
-            <a
-              href="https://twitter.com/SuperAwesomeX"
-              class="social-media-links column-text"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Twitter</a
-            >
-            <a
-              href="https://www.instagram.com/superawesomelabs/"
-              class="social-media-links column-text"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Instagram</a
-            >
-            <a href="#" class="social-media-links column-text">YouTube</a>
+            <p>
+              <a
+                href="https://twitter.com/SuperAwesomeX"
+                class="social-media-links column-text "
+                target="_blank"
+                rel="noopener noreferrer"
+                >Twitter</a
+              >
+              <span class="social-media-after"></span>
+              <a
+                href="https://www.instagram.com/superawesomelabs/"
+                class="social-media-links column-text"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Instagram</a
+              >
+              <span class="social-media-after"></span>
+              <a
+                href="https://www.linkedin.com/company/super-awesome-labs/"
+                class="social-media-links column-text"
+                target="_blank"
+                rel="noopener noreferrer"
+                >LinkedIn</a
+              >
+            </p>
+            <!-- <a href="#" class="social-media-links column-text">YouTube</a> -->
           </div>
         </div>
       </div>
