--- a/about.html
+++ b/about.html
@@ -46,8 +46,11 @@
           Hey there!
         </p>
         <p>
-          This Super Awesome site is currently under construction. Please follow
-          us on social media to stay updated on the official site launch.
+          This Super Awesome site is currently under construction.
+        </p>
+        <p>
+          Please follow us on social media to stay updated on the official site
+          launch.
         </p>
       </div>
     </div>
