--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="brand-name">Super Awesome Labs</span>
           </div>
           <div class="nav-links">
-            <a href="/about.html" class="nav-link">About</a>
+            <a href="/about" class="nav-link">About</a>
             <!-- <a href="#" class="nav-link">Blog</a>
             <a href="#" class="nav-link">Contact</a> -->
           </div>
