--- a/about.html
+++ b/about.html
@@ -30,7 +30,11 @@
             <span class="brand-name">Super Awesome Labs</span>
           </div>
           <div>
-            <a href="/about" class="nav-link">About</a>
+            <a href="/" class="nav-link about-link">Home</a>
+            <a href="/about" class="nav-link about-link">About</a>
+            <a href="/mobile-menu.html" class="nav-link mobile-menu-link"
+              >Menu</a
+            >
             <!-- <a href="#" class="nav-link">Blog</a> -->
             <!-- <a href="#" class="nav-link">Contact</a> -->
           </div>
@@ -52,6 +56,7 @@
           Please follow us on social media to stay updated on the official site
           launch.
         </p>
+        <p><3</p>
       </div>
     </div>
 
