--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <span class="brand-name">Super Awesome Labs</span>
           </div>
           <div class="nav-links">
-            <a href="/about" class="nav-link">About</a>
+            <a href="/" class="nav-link about-link">Home</a>
+            <a href="/about" class="nav-link about-link">About</a>
+            <a href="/mobile-menu.html" class="nav-link mobile-menu-link"
+              >Menu</a
+            >
             <!-- <a href="#" class="nav-link">Blog</a>
             <a href="#" class="nav-link">Contact</a> -->
           </div>
