--- a/about.html
+++ b/about.html
@@ -72,43 +72,23 @@
         <div class="columns">
           <div class="left-column">
             <p class="footer-header">Contact</p>
-            <p class="column-text">
-              Email us at
-              <a
-                href="mailto:superawesomelabs@gmail.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                >superawesomelabs@gmail.com</a
-              >.
-            </p>
+            <!-- Begin Mailchimp Signup Form -->
+            <div>
+                <form action="https://superawesomelabs.us4.list-manage.com/subscribe/post?u=2e76784570cf24499f04b2ac9&amp;id=e8b3fcda45" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                  
+                  <label for="mce-EMAIL" class="subscribe-labels" type="text">Email Address</label>
+                  <input type="email" value="" name="EMAIL" class="required email" id="subscribe-input" placeholder="Email Address">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2e76784570cf24499f04b2ac9_e8b3fcda45" tabindex="-1" value=""></div>
+                    <input type="submit" value="Subscribe" name="subscribe" id="subscribe-button" class="button">
+                    </div>
+                </form>
+                </div>
+              <!--End mc_embed_signup-->
           </div>
-          <!-- <div class="left-column">
-            <p class="footer-header">Super Subscribe</p>
-            <p class="column-text">Receive awesome newsletters!</p>
-            <label for="subscribe-input" class="subscribe-labels" type="text"
-              >Subscribe</label
-            >
-            <input
-              aria-label="subscribe input"
-              type="text"
-              name="email"
-              required="required"
-              placeholder="Email Address"
-              id="subscribe-input"
-            />
-            <span>
-              <label
-                for="subscribe-button"
-                class="subscribe-labels"
-                type="button"
-                >Subscribe</label
-              >
-              <input type="hidden" name="action" value="subscribe" />
-              <button id="subscribe-button">
-                Subscribe
-              </button>
-            </span>
-          </div> -->
           <!-- /.left-column -->
           <div class="right-column">
             <p class="footer-header ">Awesome Social Media</p>
@@ -137,9 +117,10 @@
                 >LinkedIn</a
               >
             </p>
-            <!-- <a href="#" class="social-media-links column-text">YouTube</a> -->
           </div>
+          <!-- /.left-column -->
         </div>
+        <!-- /.columns -->
       </div>
       <!-- /.container  -->
     </footer>
