Fix About nav styles

--- a/about.html
+++ b/about.html
@@ -29,10 +29,9 @@
             <img src="../assets/icons/logo.png" alt="logo" class="logo" />
             <span class="brand-name">Super Awesome Labs</span>
           </div>
-          <div>
+          <div class="nav-links">
             <a href="/" class="nav-link about-link">Home</a>
             <a href="/about" class="nav-link about-link">About</a>
-            
             <!-- <a href="#" class="nav-link">Blog</a> -->
             <!-- <a href="#" class="nav-link">Contact</a> -->
           </div>
