--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <div class="nav-links">
             <a href="/" class="nav-link about-link">Home</a>
             <a href="/about" class="nav-link about-link">About</a>
-            <!-- <a href="#" class="nav-link">Blog</a>
-            <a href="#" class="nav-link">Contact</a> -->
+            <!-- <a href="#" class="nav-link">Blog</a> -->
+            <!-- <a href="#" class="nav-link">Contact</a> -->
           </div>
         </a>
       </nav>
