Update header text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="columns">
           <div class="left-column">
-            <p class="footer-header">Contact</p>
+            <p class="footer-header">Super Subscribe</p>
             <!-- Begin Mailchimp Signup Form -->
             <div>
               <form action="https://superawesomelabs.us4.list-manage.com/subscribe/post?u=2e76784570cf24499f04b2ac9&amp;id=e8b3fcda45" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
