Update mobile nav styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </a>
       </nav>
     </header>
-    <button id="menu-button" onclick="toggleMenu()">Menu</button>
+    <button id="menu-button" onclick="toggleMenu()"><img src="assets/images/Hamburger.svg"></button>
             <div id="mobile-menu" class="hidden">
               <div id="mobile-links">
                   <a href="/" class="mobile-link">Home</a>
