--- a/about.html
+++ b/about.html
@@ -40,7 +40,9 @@
     </header>
     <!-- /header  -->
 
-    <button id="menu-button" onclick="toggleMenu()">Menu</button>
+    <button id="menu-button" onclick="toggleMenu()">
+      <img src="assets/images/Hamburger.svg">
+    </button>
             <div id="mobile-menu" class="hidden">
               <div id="mobile-links">
                   <a href="/" class="mobile-link">Home</a>
