Update mobil menu

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <!-- /header  -->
 
     <button id="menu-button" onclick="toggleMenu()">
-      <img src="assets/images/Hamburger.svg">
+      <img src="assets/icons/buttonHamburger.svg">
     </button>
             <div id="mobile-menu" class="hidden">
               <div id="mobile-links">
