Fix button styling on mobile

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="response" id="mce-success-response" style="display:none"></div>
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2e76784570cf24499f04b2ac9_e8b3fcda45" tabindex="-1" value=""></div>
-                <input type="submit" value="Subscribe" name="subscribe" id="subscribe-button" class="button">
+                <input type="submit" value="Subscribe" name="subscribe" id="subscribe-button">
                 </div>
             </form>
             </div>
