Fix copyright typo

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ search engine optimization (SEO).
     </footer>
     <div class="copyright">
       <div class="container copyright-container">
-        <p class="copyright-left"><span class="copyright-brand">© Super Awesome. </span>All Rights Reserved | Privacy Notice</p>
+        <p class="copyright-left"><span class="copyright-brand">© Super Awesome Labs. </span>All Rights Reserved | Privacy Notice</p>
         <p class="company-note">Everyone is welcome here (except jerks!) <img src="assets/icons/pride-flag.png" id="pride-flag"></p>
       </div>
     </div>
