--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ development, website design, and
 search engine optimization (SEO).
         </h1>
         <!-- <a href="/about" class="hero-button">Learn How →</a> -->
-        <span class="coming-soon">COMING SOON 2020</span>
+        <span class="coming-soon">LAUNCHING 2020 <span role="img" aria-label="rocket">🚀</span></span>
       </div>
     </div>
     <footer>
